k8s/istio/allow-ingest-to-db.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: allow-ingest-to-db
  namespace: geoint
spec:
  selector:
    matchLabels:
      app: postgis
  action: ALLOW
  rules:
  - from:
    - source:
        principals: ["cluster.local/ns/geoint/sa/default"]
  - to:
    - operation:
        ports: ["5432"]
